fix font size changes in media queries being too small

--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ body{
   align-items: center;
   min-height:100vh;
   background-color: #449372;
+  font-size: 100%;
   /* background-color: #8dc1ac; */
   /* background:linear-gradient(-45deg,#d7eee4,#449372); */
 }
@@ -223,7 +224,7 @@ main {
 }
 
 .navbar > div {
-  padding: 5px;
+  /* padding-top: 15px; */
 }
 
 .navbar-item:hover {
@@ -232,10 +233,14 @@ main {
 
 .navbar-item {
   height: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: 100%;
+  align-items: center;
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
-  font-size: x-large;
+  justify-content: center; */
+  font-size: 1em;
+  /* padding: ; */
 }
 
 /* The active class defined here to change background colour
@@ -246,25 +251,16 @@ from regular navbar background colour */
 /*  */
 
 /* Media Queries */
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1200px) {
   .navbar-item {
-    font-size: small;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  * {
-    font-size: x-large;
+    font-size: 1em;
   }
 }
 
 @media screen and (max-width: 350px) {
-  .navbar p {
+  .navbar-item p {
     display: none;
   }
-
-  .navbar > div {
-    padding: 15px
-  }
 }
+
 /*  */
